timeline removed, need to do the rest at home

--- a/client/main.css
+++ b/client/main.css
@@ -26,3 +26,20 @@ html, body
 	border: 1px solid #337ab7;
 	//background: #337ab7;
 }
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 25em;
+  background-color: #f5f5f5;
+}
