--- a/client/main.css
+++ b/client/main.css
@@ -11,7 +11,7 @@ html, body
 }
 .bloc .list-group-item
 {
-	padding-top: 40px;
+	padding-top: 20px;
 	margin-top: 10px;
 	border: 1px solid #337ab7;
 	//background: #337ab7;
@@ -30,9 +30,9 @@ html {
 }
 
 .nopadding {
-   padding-bottom: 0 !important;
+ padding-bottom: 0 !important;
 
-   margin: 0 !important;
+ margin: 0 !important;
 }
 
 .nomargin {
@@ -40,13 +40,24 @@ html {
 	margin-right: 0 !important;
 }
 .well .col{
-   background-color: rgba(66,139,202, 0.6);
+ background-color: rgba(66,139,202, 0.6);
 }
 .well{
-   background-color: rgba(245,245,245, 0.45);
+ background-color: rgba(245,245,245, 0.45);
 }
 
 #iron-router-progress {
-    background-color :rgb(66,139,202);
-    box-shadow       : 0 0 5px rgb(66,139,202);
+  background-color :rgb(66,139,202);
+  box-shadow       : 0 0 5px rgb(66,139,202);
 }
+
+.list-group.scroll{
+
+  min-width: 400px;
+  width: 100%;
+  max-height: 500px;
+  overflow-y:auto; 
+} 
+li > h4{
+    display : inline-block;
+  }
